# GameDevelopment

./: .gitignore  CMakeLists.txt  README.md
include/: Animation.h  Bitmask.h  CSprite.h  C_Animation.h  C_BoxCollider.h  C_Camera.h  C_Collider.h  C_Drawable.h  C_InstanceID.h  C_KeyboardMovement.h  C_Sprite.h  C_Transform.h  Component.h  Debug.h  Game.h  Input.h  Object.h  ObjectCollection.h  QuadTree.h  ResourceAllocator.h  S_Collidable.h  S_Drawable.h  Scene.h  SceneGame.h  SceneSplashScreen.h  SceneStateMachine.h  Tile.h  TileMapParser.h  Utilities.h  Window.h  WorkingDirectory.h
resources/: CMakeLists.txt  House Exterior.tmx  Test Map 1.tmx  Test Map 2.tmx  viking.json
src/: Animation.cpp  Bitmask.cpp  CMakeLists.txt  CSprite.cpp  C_Animation.cpp  C_BoxCollider.cpp  C_Camera.cpp  C_Collider.cpp  C_Drawable.cpp  C_InstanceID.cpp  C_KeyboardMovement.cpp  C_Sprite.cpp  C_Transform.cpp  Debug.cpp  Game.cpp  Input.cpp  Object.cpp  ObjectCollection.cpp  QuadTree.cpp  S_Collidable.cpp  S_Drawable.cpp  SceneGame.cpp  SceneSplashScreen.cpp  SceneStateMachine.cpp  TileMapParser.cpp  Window.cpp  WorkingDirectory.cpp  main.cpp
